--- a/client/src/components/Shop/DeviceList/DeviceList.module.scss
+++ b/client/src/components/Shop/DeviceList/DeviceList.module.scss
@@ -2,7 +2,6 @@
 
 .list {
     display: flex;
+    gap: 0 $indent-base;
     flex-wrap: wrap;
-    margin-left:-($indent-card);
-    margin-right:-($indent-card);
 }
